<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_start"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_input"
            android:icon="@drawable/ic_menu_input"
            android:title="@string/menu_input" />
        <item
            android:id="@+id/nav_output"
            android:icon="@drawable/ic_menu_output"
            android:title="@string/menu_output" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_menu_inventory"
            android:title="@string/menu_inventory" />
    </group>

    <item android:title="Administración">
        <menu>
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_menu_notification"
                android:title="@string/menu_notification" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
