<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">

    <fragment
        android:id="@+id/nav_start"
        android:name="com.example.despensappapplication.ui.start.StartFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/start_fragment" />
    <fragment
        android:id="@+id/nav_input"
        android:name="com.example.despensappapplication.ui.input.InputFragment"
        android:label="@string/menu_input"
        tools:layout="@layout/input_fragment" />
    <fragment
        android:id="@+id/nav_output"
        android:name="com.example.despensappapplication.ui.output.OutputFragment"
        android:label="@string/menu_output"
        tools:layout="@layout/output_fragment" />
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.despensappapplication.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/inventory_fragment" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.despensappapplication.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/notification_fragment" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.despensappapplication.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/setting_fragment" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.despensappapplication.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout_fragment" />
</navigation>