<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color5"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="50dp">
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hnt_name"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box1"
            android:gravity="center"
            android:textColor="@color/color6"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edt_surnames"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hnt_surnames"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box1"
            android:gravity="center"
            android:textColor="@color/color6"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hnt_mail"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box1"
            android:gravity="center"
            android:textColor="@color/color6"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hnt_password"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box1"
            android:gravity="center"
            android:textColor="@color/color6"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/txv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txv_account"
            android:gravity="center"
            android:textColor="@color/color6"
            android:textStyle="bold"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left">
            <RadioButton
                android:id="@+id/rdb_premium_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdb_premium_account"/>

            <RadioButton
                android:id="@+id/rdb_free_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdb_free_acoount"/>
        </RadioGroup>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/box3"
            android:text="@string/btn_create_account"
            android:textColor="@color/color5"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txv_question_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txv_question_account"
            android:gravity="center"
            android:textColor="@color/color6"/>

        <TextView
            android:id="@+id/txv_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txv_enter"
            android:gravity="center"
            android:textColor="@color/color8"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

</LinearLayout>