<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/color5"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/img_logo_despensapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_despensapp_200x75"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hnt_user_mail"
                android:inputType="text"
                android:paddingTop="30dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hnt_password"
                android:inputType="textPassword"
                android:paddingTop="30dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/box3"
            android:text="@string/btn_enter"
            android:textColor="@color/color5"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <View
                android:id="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/color6"/>

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="o"
                android:layout_toRightOf="@+id/v1"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/color6"
                android:layout_toRightOf="@+id/t1"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/box3"
            android:text="@string/btn_create_account"
            android:textColor="@color/color5"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>